# static-link-test

./: CMakeLists.txt  core.h  main.cpp  plugin.h
